more section added

--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,9 @@ nav {
     width: 50%;
 }
 
-.title-para, .about-para {
+.title-para,
+.about-para,
+.operation-para {
     font-size: clamp(0.8rem, 1.3vw, 2rem);
     color: #f5f5f5;
     margin-left: 5%;
@@ -89,18 +91,22 @@ nav {
 }
 
 .about-title,
-.service-title {
+.service-title,
+.operation-title,
+.testimonial-title {
     font-size: clamp(1rem, 2vw, 3rem);
     text-align: center;
     padding: 30px 30px;
 }
 
 
-.about-heading {
+.about-heading,
+.operation-heading {
     font-size: clamp(2rem, 3.5vw, 4rem);
 }
 
-.about-para {
+.about-para,
+.operation-para {
     color: black;
     margin: 0;
 }
@@ -151,6 +157,50 @@ nav {
     object-fit: cover; /* Crop image to fit */
 }
 
+.operation-content-container {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.chairman {
+    height: clamp(250px, 25vw, 350px);
+}
+
+.counts {
+    display: flex;
+    justify-content: space-around;
+    font-size: 1.2rem;
+    padding: 20px 20px;
+}
+
+.testimonial-card-container {
+    display: flex;
+    gap: 10px;
+}
+
+.testimonial-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 500px;
+    padding: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+}
+
+.parle {
+    height: 40px;
+}
+
+.upfield {
+    height: 80px;
+}
+
+.fragata,
+.arlo-pro {
+    height: 50px;
+}
+
 footer {
     background-color: #03030f;
     color: #f5f5f5;
@@ -177,6 +227,14 @@ i {
     position: relative;
     top: 30px;
 }
+
+@media (max-width: 1200px) {
+    .testimonial-card-container {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+}
+
 
 @media (max-width: 800px) {
     .about-content-container {
@@ -207,6 +265,11 @@ i {
     }
     .title-para {
         width: 70%;
+    }
+    .operation-content-container {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
     }
 }
 
@@ -251,6 +314,14 @@ i {
     .copyright {
         font-size: 0.8rem;
     }
+    .operation-para {
+        width: 80%;
+    }
+    .counts {
+        font-size: 0.8rem;
+        gap: 5px;
+        justify-content: center;
+    }
 }
 
 @media (max-width: 320px) {
@@ -259,6 +330,9 @@ i {
     }
     .title-para {
         width: auto;
+    }
+    .carousel-item img {
+        height: 200px;
     }
     .footer-content-container {
         padding: 30px;
